# eventLoopManager

./: .gitignore  CMakeLists.txt  Channel.h  Consumer.h  Event.h  Manager.h  Process.h  Producer.h  ProducerConfig.h  Queue.h  README.md  SensorReader.h  StatusChangeEvent.h  ThreadPool.h  ThreadSafeBlockingQueue.h  ThreadSafeConcurrentReadQueue.h  ThreadSafeQueueInterface.h  ThreadSafeWritePriorityQueue.h  kafkaProducer.cpp  kafkaProducer.h  local_history.patch  main.cpp
configs/: sensors_config.json
